--- a/pom.xml
+++ b/pom.xml
@@ -15,110 +15,136 @@
   ~ under the License.
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
-	</parent>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
 
-	<groupId>org.lifecosys</groupId>
-	<artifactId>android-jar-preinstaller</artifactId>
-	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+    <groupId>org.lifecosys</groupId>
+    <artifactId>android-jar-preinstaller</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
 
-	<name>Android Jar Preinstaller</name>
-	<description>
-		Preinstall large jar to android emulator for other android application.
-	</description>
+    <name>Android Jar Preinstaller</name>
+    <description>
+        Preinstall large jar to android emulator for other android application.
+    </description>
 
-	<organization>
-		<name>Lifecosys ©Copyright</name>
-		<url>www.lifecosys.com</url>
-	</organization>
+    <organization>
+        <name>Lifecosys ©Copyright</name>
+        <url>www.lifecosys.com</url>
+    </organization>
 
-	<licenses>
-		<license>
-			<name>Apache License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
-		</license>
-	</licenses>
-	<inceptionYear>2013</inceptionYear>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+        </license>
+    </licenses>
+    <inceptionYear>2013</inceptionYear>
 
-	<scm>
-		<url>https://github.com/hyysguyang/android-jar-preinstaller</url>
-		<connection>scm:git:git://github.com/hyysguyang/android-jar-preinstaller.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/hyysguyang/android-jar-preinstaller.git</developerConnection>
-		<tag>HEAD</tag>
-	</scm>
+    <scm>
+        <url>https://github.com/hyysguyang/android-jar-preinstaller</url>
+        <connection>scm:git:git://github.com/hyysguyang/android-jar-preinstaller.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/hyysguyang/android-jar-preinstaller.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
-	<developers>
-		<developer>
-			<id>Young Gu</id>
-			<name>Young Gu</name>
-			<email>hyysguyang@gmail.com</email>
-			<url>www.lifecosys.com</url>
-			<organization>Lifecosys ©Copyright</organization>
-			<organizationUrl>www.lifecosys.com</organizationUrl>
-		</developer>
-	</developers>
+    <developers>
+        <developer>
+            <id>Young Gu</id>
+            <name>Young Gu</name>
+            <email>hyysguyang@gmail.com</email>
+            <url>www.lifecosys.com</url>
+            <organization>Lifecosys ©Copyright</organization>
+            <organizationUrl>www.lifecosys.com</organizationUrl>
+        </developer>
+    </developers>
 
-	<properties>
-		<jboss.marshalling.version>1.3.14.GA</jboss.marshalling.version>
-		<yammer.metrics.version>2.1.4</yammer.metrics.version>
-	</properties>
+    <properties>
+        <jboss.marshalling.version>1.3.14.GA</jboss.marshalling.version>
+        <yammer.metrics.version>2.1.4</yammer.metrics.version>
+    </properties>
 
-	<build>
-		<sourceDirectory>src/main/scala</sourceDirectory>
-		<plugins>
-			<plugin>
-				<groupId>net.alchim31.maven</groupId>
-				<artifactId>scala-maven-plugin</artifactId>
-				<version>3.1.0</version>
-				<executions>
-					<execution>
-						<id>scala-compile-first</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>add-source</goal>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>scala-test-compile</id>
-						<phase>process-test-resources</phase>
-						<goals>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+    <build>
+        <sourceDirectory>src/main/scala</sourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
 
-	<dependencies>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>2.9.2</version>
-		</dependency>
-	</dependencies>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>org.lifecosys.androidjarpreinstaller.AndroidJarPreinstaller</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>generator-execute-jar</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+    </dependencies>
 </project>
