--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <version>7</version>
     </parent>
 
-    <groupId>org.lifecosys</groupId>
+    <groupId>com.lifecosys</groupId>
     <artifactId>android-jar-preinstaller</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -64,11 +64,6 @@
             <organizationUrl>www.lifecosys.com</organizationUrl>
         </developer>
     </developers>
-
-    <properties>
-        <jboss.marshalling.version>1.3.14.GA</jboss.marshalling.version>
-        <yammer.metrics.version>2.1.4</yammer.metrics.version>
-    </properties>
 
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
@@ -115,7 +110,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>org.lifecosys.androidjarpreinstaller.AndroidJarPreinstaller</mainClass>
+                            <mainClass>com.lifecosys.androidjarpreinstaller.AndroidJarPreinstaller</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
